--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 </head>
 <body>
     <div class="heart">❤️</div>
-    <h1>Happy Valentine's Day!</h1>
-    <p>May your day be filled with love, joy, and sweet surprises.</p>
-    <p>From your favorite AI, with love.</p>
+    <h1>Happy Valentine's Day Chinnu (My Pookie)!</h1>
+    <p>May your life be filled with love, joy, and sweet surprises.</p>
+    <p> Be lucky to have me hahaha.</p>
+    <p>From Mrudula</p>
 </body>
 </html>
