Enhance index.html with image and text updates
Added image container for a couple bears and updated text.

--- a/index.html
+++ b/index.html
@@ -22,13 +22,26 @@
             font-size: 5em;
             color: #ff1493;
         }
+        .image-container {
+            margin: 30px 0;
+        }
+        .image-container img {
+            max-width: 400px;
+            height: auto;
+            border-radius: 10px;
+        }
     </style>
 </head>
 <body>
     <div class="heart">❤️</div>
     <h1>Happy Valentine's Day Chinnu (My Pookie)!</h1>
+    
+    <div class="image-container">
+        <img src="https://i.etsystatic.com/[your-image-id]/il_fullxfull.[image-hash].jpg" alt="Bubu and Dudu kawaii couple bears">
+    </div>
+    
     <p>May your life be filled with love, joy, and sweet surprises.</p>
-    <p> Be lucky to have me hahaha.</p>
-    <p>From Mrudula</p>
+    <p>Be lucky to have me and bear my tantrums as always hahaha...</p>
+    <p>From Mrudula Reddy</p>
 </body>
 </html>
