--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <p>From Mrudula Reddy</p>
     
     <div class="link-section">
-        <p><a href="https://github.com/lakshmic6/PersonalRepo/edit/main/index.html">Please Click Here</a></p>
+        <p><a href="https://tenor.com/view/kiss-gif-13874597465072197683">Please click here</a></p>
     </div>
 </body>
 </html>
