--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1>Happy Valentine's Day Chinnu (My Pookie)!</h1>
     
     <div class="image-container">
-        <img src="https://media.tenor.com/images/5072197683/original.gif" alt="Kiss GIF">
+        <img src="https://media.giphy.com/media/l4FGpP4lxGGgK5CBW/giphy.gif" alt="Kiss GIF">
     </div>
     
     <p>May your life be filled with love, joy, and sweet surprises.</p>
